--- a/02_다양한선택자.html
+++ b/02_다양한선택자.html
@@ -124,11 +124,11 @@
         뒤에 있는 모든 요소 선택 시 : 선택자 ~ 선택자 { 설정 내용 } 의 형식으로 사용한다
     </p>
     <div>
-        <div id="test1">div test1</div>
-        <div id="test2">div test2</div>
-        <div id="test3">div test3</div>
-        <div id="test4">div test4</div>
-        <div id="test5">div test5</div>
+        <div id="div-test1">div test1</div>
+        <div id="div-test2">div test2</div>
+        <div id="div-test3">div test3</div>
+        <div id="div-test4">div test4</div>
+        <div id="div-test5">div test5</div>
     </div>
     
     <h2>반응 선택자</h2>
