--- a/lecture/05_텍스트스타일.html
+++ b/lecture/05_텍스트스타일.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>05_텍스트 스타일</title>
+	<!-- 웹 폰트 링크 -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
 	<!-- 외부 스타일 시트 링크 -->
-	<link href="../resources/CSS/font.css">
+	<link href="../resources/CSS/font.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>텍스트 스타일</h1>
