--- a/lecture/05_텍스트스타일.html
+++ b/lecture/05_텍스트스타일.html
@@ -9,8 +9,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
-	<!-- 외부 스타일 시트 링크 -->ype="text/
-	<link href="../resources/CSS/font.css" rel="stylesheet" tcss">
+	<!-- 외부 스타일 시트 링크 -->
+	<link href="../resources/CSS/font.css" rel="stylesheet" type="text/css">
+	<link href="../resources/CSS/textstyle.css" rel="stylesheet" type="text/css">
+	<link href="../resources/CSS/paragraph.css" rel="stylesheet" type="text/css">
+	<link href="../resources/CSS/liststyle.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>텍스트 스타일</h1>
