--- a/lecture/10_레이아웃스타일(배치).html
+++ b/lecture/10_레이아웃스타일(배치).html
@@ -5,6 +5,124 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
+        <style>
+        .inline-block {
+            display: inline-block;
+            width: 100px;
+            height: 100px;
+            background-color: orange;
+        }
+
+        #first {
+            position: static;
+            top : 20px;
+            left: 20px;
+        }
+
+        #second {
+            position: relative;
+            top: 20px;
+            left: 20px;
+        }
+
+        #third {
+            position: relative;
+            bottom: 20px;
+            right: 20px;
+        }
+
+        .positioning {
+            border: 1px solid black;
+        }
+
+        .outer {
+            position: relative;
+        }
+
+        .first {
+            width: 300px;
+            height: 300px;
+            background-color: yellow;
+        }
+
+        .second {
+            width: 200px;
+            height: 200px;
+            background-color: yellowgreen;
+            position: absolute;
+            top: 50px;
+            left: 50px;
+        }
+
+        .third {
+            width: 100px;
+            height: 100px;
+            background-color: red;
+            position: absolute;
+            top: 100px;
+            left: 100px;
+        }
+
+        .fixed-area {
+            width: 100px;
+            height: 100px;
+            position: fixed;
+            left: 500px;
+            top: 500px;
+        }
+
+        .vis-test{
+            width: 100px;
+            height: 100px;
+            border: 1px solid black;
+        }
+
+        .vis-test1 { background-color: red; }
+        .vis-test2 { 
+            background-color: yellow;
+            /* visibility: hidden; */ 
+            display: none; 
+        }
+        .vis-test3 { background-color: green; }
+
+        .wrap {
+            position: relative;
+        }
+        .z-test {
+            width: 150px;
+            height: 100px;
+            border: 1px solid black;
+            position: absolute;
+        }
+
+        .z-test1 {
+            background-color: yellow;
+            top: 100px;
+            left: 100px;
+            z-index: 100;
+            
+        }
+
+        .z-test2 {
+            background-color: green;
+            top: 50px;
+            left: 50px;
+            z-index: 50;
+        }
+
+        .z-test3 {
+            background-color: red;
+            top: 0px;
+            left: 0px;
+        }
+
+        .float-test {
+            border: 1px solid black;
+            width: 150px;
+            height: 100px;
+            float: right;
+        }
+        </style>
     </head>
     <body>
         <h1>배치 관련 스타일</h1>
@@ -15,6 +133,11 @@
             top, right. bottom, left 속성이 아무런 영향을 주지 못함.<br>
             relative : 일반적인 문서 흐름에 따라 배치.
             자기 자신 기준으로 top, right, bottom, left의 값에 따라 오프셋 적용
+            absolute : 일반적인 문서 흐름에서 제외되며 공간도 차지하지 않음.
+            가장 가까운 위치 지정 조상 요소에 대해 상대적으로 배치되며 top, right, bottim,
+            left의 값이 위치를 결정함. <br>
+            fixed : 일반적인 문서 흐름에서 제외되며 공간도 차지하지 않음.
+            해당 요소가 모든 페이지의 같은 위치에 출력.
         </p>
 
         <h3>static과 realtive</h3>
@@ -22,7 +145,47 @@
         <div class="inline-block" id="second"></div>
         <div class="inline-block" id="third"></div>
 
+        <h3>absolute</h3>
+        <div class="outer">
+            <div class="positioning first"></div>
+            <div class="positioning second"></div>
+            <div class="positioning third"></div>
+        </div>
 
+        <h3>fixed</h3>
+        <div class="positioning fixed-area"></div>
 
+        <h3>visibility</h3>
+        <p>
+            페이지에 특정 요소를 보이거나 보이지 않게 하는 속성<br>
+            display : none 속성은 페이지도 공간도 차지하지 않고,
+            visibility : hidden 속성은 페이지 공간을 차지한다.
+        </p>
+        <div class="vis-test vis-test1"></div>
+        <div class="vis-test vis-test2"></div>
+        <div class="vis-test vis-test3"></div>
+
+        <h3>z-index</h3>
+        <p>
+            페이지 안의 요소들을 순서대로 위로 쌓는 속성
+        </p>
+        <div class="wrap">
+            <div class="z-test z-test1">요소1</div>
+            <div class="z-test z-test2">요소2</div>
+            <div class="z-test z-test3">요소3</div>
+        </div>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <h3>float 속성</h3>
+        <p>
+            페이지 내의 요소의 위치를 왼쪽이나 오른쪽으로 지정하는 속성
+        </p>
+        <div>
+            <div class="float-test">요소1</div>
+            <div class="float-test">요소2</div>
+            <div class="float-test">요소3</div>
+            <div class="float-test">요소4</div>
+            <div class="float-test">요소5</div>
+        </div>
+        
     </body>
 </html>
