--- a/lecture/13_애니메이션.html
+++ b/lecture/13_애니메이션.html
@@ -5,6 +5,45 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
+        <style>
+        .box {
+            width: 100px;
+            height: 100px;
+            background-color: red;
+            border: 1px solid black;
+        }
+
+        .duration:hover{
+            background-color: yellow;
+        }
+
+        .duration {
+            /* 트랜지션이 진행되는 시간을 지정 (s or ms) */
+            transition-duration: 5s;
+        }
+
+        .property:hover{
+            width: 200px;
+            height: 200px;
+            background-color: yellow;
+            transform: rotate(180deg);
+        }
+
+        .property {
+            transition-property: background-color, transform, width, height;
+            transition-duration: 2s, 3s, 1s, 10s;
+        }
+
+        .timing{
+            transition-duration: 20s;
+        }
+
+        input:checked ~.timing{
+            background-color: yellow;
+            width: 100%;
+        }
+
+        </style>
     </head>
     <body>
     <h1>애니메이션</h1>
@@ -15,5 +54,47 @@
         transition-duration : 애니메이션 효과를 얼마동안 줄 지 설정<br>
         transition-property : 애니메이션 효과를 적용할 프로퍼티 목록을 정의
     </p>
+
+    <h3>transform</h3>
+        <p>
+            사용자의 동작에 따라 크기가 바뀌고 요소가 이동, 회전하는 것을 변형이라고 하며,
+            transform  속성에 변형 함수를 사용해서 나타낼 수 있다. <br>
+            변형이 부드럽게 이어지면 애니메이션이 된다.
+        </p>
+        <ul>
+            <li>translate(x,y) : 지정한 크기만큼 x,y 축으로 이동</li>
+            <li>scale(x,y) : 지정한 크기만큼 x,y 축으로 확대/축소</li>
+            <li>roatate(각도) : 지정한 각도만큼 회전</li>
+            <li>skew(x,y) : 지정한 크기만큼 x,y 축으로 요소 변형</li>
+        </ul>
+
+        <h3>트랜지션 진행 시간 지정하기</h3>
+        <div class="box duration"></div>
+
+        <h3>트랜지션 진행별 시간 설정하기</h3>
+        <div class="box property"></div>
+    
+        <h3>트랜지션 진행별 속도 지정하기</h3>
+        <p>
+            transition-timing-function : linear | ease | ease-in | ease-out | 
+            ease-in-out | cubic-bezier(n,n,n,n) <br>
+            베지어 곡선 : 컴퓨터 그래픽스에서 사용되는 특별한 형태의 곡선으로,
+            CSS 애니메이션 등에서 도형을 그릴 때 사용한다. <br>
+            * 참고 : https://cubic-bezier.com
+        </p>
+        <div>
+            <label>시작 : </label>
+            <input type="checkbox">
+            <p>linear</p>
+            <div class="box timing"></div>
+            <p>ease</p>
+            <div class="box timing"></div>
+            <p>ease-in</p>
+            <div class="box timing"></div>
+            <p>ease-out</p>
+            <div class="box timing"></div>
+            <p>ease-in-out</p>
+            <div class="box timing"></div>
+        </div>
     </body>
 </html>
