--- a/pratice/1_full_screen.html
+++ b/pratice/1_full_screen.html
@@ -14,8 +14,34 @@
     <link href="../resources/CSS/style.css" rel="stylesheet" type="text/css">
     <!-- favicon (Real Favicon Generator 활용) -->
     <link rel="icon" type="image/x-icon" href="../resources/images/favicon.ico">
+    <!-- 리셋 CSS
+    브라우저별로 디폴트로 적용 된 CSS(여백, 폰트 등)에 차이가 있으므로 브라우저 별로 다르게 보일 수 있어
+    리셋 CSS를 활용한다. -->
+    <link href="https://unpkg.com/ress/dist/ress.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    
+    <div id="home" class="big-bg">
+        <header class="page-header wrapper">
+            <h1><a href="1_full-screen.html">
+                <img class="logo" src="../resources/images/logo.png" alt="HOME">
+            </a></h1>
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="2_column.html">News</a></li>
+                    <li><a href="3_grid.html">Menu</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="home-content wrapper">
+            <h2 class="page-title">Full Screen Pratice</h2>
+            <p>
+                풀 스크린이란 이미지 또는 동영상을 메인으로 화면 전체에 출력하는
+                레이아웃입니다.
+            </p>
+            <a class="button" href="3_grid.html">메뉴 보기</a>
+        </div>
+    </div>
+
 </body>
 </html>
