--- a/pratice/2_column.html
+++ b/pratice/2_column.html
@@ -49,13 +49,31 @@
             <!-- 기사 본문 -->
             <img src="../resources/images/tower1.PNG" alt="타워">
             <p>
-                가난한 하나에 가을로 봅니다. 나는 잠, 멀리 패, 까닭이요, 책상을 계십니다. 프랑시스 까닭이요, 위에 계십니다. 부끄러운 내 헤일 하나에 이름과, 거외다. 나의 별에도 때 봅니다. 딴은 덮어 많은 하나 있습니다. 나는 별 오는 별 사람들의 하나에 이름과, 언덕 무성할 있습니다. 이런 헤일 노루, 듯합니다. 사람들의 이네들은 하늘에는 봅니다.
+                <b>반응형 웹(Responsive Web) 디자인</b>이란
+                출력 영역의 너비에 따라서 변화하게 디자인 된 웹 사이트를 의미한다.
+                데스크탑과 모바일의 너비는 매우 다른데, 반응형 웹 디자인을 사용하면
+                콘텐츠를 별도로 변경하지 않고도 디바이스 크기에 따라서 CSS만으로 외관을 변경할 수 있다.
             </p>
             <p>
-                그러나 이제 하늘에는 묻힌 거외다. 어머니, 가득 어머님, 같이 북간도에 별들을 버리었습니다. 남은 동경과 못 계집애들의 별 아침이 보고, 릴케 버리었습니다. 그리워 오면 잔디가 아스라히 가을로 나의 별 이름자를 내 까닭입니다. 하나에 시인의 속의 어머님, 패, 하나의 아침이 계십니다. 잠, 그리고 지나고 언덕 멀리 하나에 계집애들의 이네들은 까닭입니다. 이국 하나에 무성할 남은 이름과 사람들의 라이너 아무 있습니다. 아이들의 이름자를 불러 아무 있습니다. 않은 소녀들의 어머니 하나의 밤을 있습니다. 밤을 별이 그리고 나는 사랑과 하늘에는 때 있습니다.
+                <b>반응형 웹 디자인을 적용하는 방법</b>으로는
+                1. 2-column, 3-column 등 여러 개의 컬럼이 수평으로 정렬 되면 모바일의 작은 화면에서는 보기 힘드므로
+                수평으로 정렬 된 컬럼을 수직으로 배치해 1-column으로 출력하는 방법
+                2. 내비게이션 메뉴의 경우 모바일의 작은 화면에서는 한 눈에 볼 수 없으므로 처음에는 내비게이션 메뉴를
+                감추고 메뉴 전용 아이콘을 눌렀을 때 모든 내비게이션 메뉴를 출력해서 보여주는 방법 등이 주로 사용된다.
             </p>
             <p>
-                비둘기, 했던 속의 아이들의 무덤 패, 헤일 버리었습니다. 것은 불러 하나에 까닭이요, 청춘이 있습니다. 이름을 하나 나는 가득 봅니다. 별들을 어머니, 책상을 딴은 남은 있습니다. 소학교 아침이 어머님, 소녀들의 별에도 나의 쉬이 위에 그러나 있습니다. 강아지, 너무나 남은 다하지 있습니다. 잠, 하늘에는 쉬이 까닭이요, 다하지 우는 사랑과 나의 별에도 있습니다. 다 아이들의 무덤 있습니다. 아이들의 당신은 위에 까닭이요, 내 추억과 있습니다.
+                <b>viewport란</b>다양한 장치에서의 출력 영역을 의미한다.
+                별도로 지정하지 않았을 시 모바일에서도 데스크탑과 같은 너비에 맞춰서 모든 것을 출력해버리므로
+                글자가 너무 작아서 읽기가 힘들어진다.
+                현재 viewport는 적용되어 있지만, 레이아웃이 깨지므로 추가적인 조정이 필요하다.
+            </p>
+            <p>
+                <b>미디어 쿼리(Media Query)란</b>
+                웹페이지가 출력하는 화면 크기에 따라서 다른 CSS를 적용하게 해주는 기능으로
+                "화면의 너비가 600px 이하일 때 문자의 크기를 작게 만든다"와 같이
+                사용자 화면 환경에 맞게 스타일 변경이 가능하다.
+                @media (max-width:600px) { p { font-size: 10px; }}와 같은 형태로 사용 시
+                0~600px 크기의 화면에는 p 태그의 문자 크기를 10px로 나타낸다.
             </p>
             <p>
                 하나의 써 딴은 아직 가슴속에 헤는 멀듯이, 있습니다. 쉬이 자랑처럼 청춘이 했던 듯합니다. 이제 사랑과 별을 별빛이 했던 다 풀이 동경과 있습니다. 헤일 아름다운 하나의 파란 라이너 별빛이 않은 있습니다. 청춘이 된 지나가는 거외다. 같이 소학교 우는 아름다운 아무 못 버리었습니다. 옥 겨울이 아이들의 이웃 별 무성할 불러 까닭입니다. 덮어 잔디가 까닭이요, 봅니다. 어머니 우는 이 했던 가을 있습니다. 다하지 묻힌 가을로 아무 별 언덕 애기 이름과 별 봅니다. 별 별 남은 봅니다.
@@ -79,6 +97,10 @@
                 하이미디어 아카데미 종로 지점 15F 11강의장
             </p>
         </aside>
+        <!-- 3-column 레이아웃으로 변경해보기 -->
+        <div class="ad">
+            <img src="../resources/images/banner.PNG">
+        </div>
     </div>
     <footer>
         <div class="wrapper">
